tests/NormalTests/paczka1/fuzzy1/98273999.err
Error in line 14: bs6h A358 69,4
Error in line 24: ZzE A358 85,0
Error in line 31: 0iL A490 -1,9
Error in line 28: 9fyb S295 44,5
